@@ -111,53 +111,61 @@ class WSGIUtilsTestCase(WerkzeugTestCase):
 
         io = BytesIO(b'123456')
         stream = RaisingLimitedStream(io, 3)
-        self.assert_equal(stream.read(), b'123')
+        self.assert_strict_equal(stream.read(), b'123')
         self.assert_raises(BadRequest, stream.read)
 
         io = BytesIO(b'123456')
         stream = RaisingLimitedStream(io, 3)
-        self.assert_equal(stream.tell(), 0)
-        self.assert_equal(stream.read(1), b'1')
-        self.assert_equal(stream.tell(), 1)
-        self.assert_equal(stream.read(1), b'2')
-        self.assert_equal(stream.tell(), 2)
-        self.assert_equal(stream.read(1), b'3')
-        self.assert_equal(stream.tell(), 3)
+        self.assert_strict_equal(stream.tell(), 0)
+        self.assert_strict_equal(stream.read(1), b'1')
+        self.assert_strict_equal(stream.tell(), 1)
+        self.assert_strict_equal(stream.read(1), b'2')
+        self.assert_strict_equal(stream.tell(), 2)
+        self.assert_strict_equal(stream.read(1), b'3')
+        self.assert_strict_equal(stream.tell(), 3)
         self.assert_raises(BadRequest, stream.read)
 
         io = BytesIO(b'123456\nabcdefg')
         stream = wsgi.LimitedStream(io, 9)
-        self.assert_equal(stream.readline(), b'123456\n')
-        self.assert_equal(stream.readline(), b'ab')
+        self.assert_strict_equal(stream.readline(), b'123456\n')
+        self.assert_strict_equal(stream.readline(), b'ab')
 
         io = BytesIO(b'123456\nabcdefg')
         stream = wsgi.LimitedStream(io, 9)
-        self.assert_equal(stream.readlines(), [b'123456\n', b'ab'])
+        self.assert_strict_equal(stream.readlines(), [b'123456\n', b'ab'])
 
         io = BytesIO(b'123456\nabcdefg')
         stream = wsgi.LimitedStream(io, 9)
-        self.assert_equal(stream.readlines(2), [b'12'])
-        self.assert_equal(stream.readlines(2), [b'34'])
-        self.assert_equal(stream.readlines(), [b'56\n', b'ab'])
+        self.assert_strict_equal(stream.readlines(2), [b'12'])
+        self.assert_strict_equal(stream.readlines(2), [b'34'])
+        self.assert_strict_equal(stream.readlines(), [b'56\n', b'ab'])
 
         io = BytesIO(b'123456\nabcdefg')
         stream = wsgi.LimitedStream(io, 9)
-        self.assert_equal(stream.readline(100), b'123456\n')
+        self.assert_strict_equal(stream.readline(100), b'123456\n')
 
         io = BytesIO(b'123456\nabcdefg')
         stream = wsgi.LimitedStream(io, 9)
-        self.assert_equal(stream.readlines(100), [b'123456\n', b'ab'])
+        self.assert_strict_equal(stream.readlines(100), [b'123456\n', b'ab'])
 
         io = BytesIO(b'123456')
         stream = wsgi.LimitedStream(io, 3)
-        self.assert_equal(stream.read(1), b'1')
-        self.assert_equal(stream.read(1), b'2')
-        self.assert_equal(stream.read(), b'3')
-        self.assert_equal(stream.read(), b'')
+        self.assert_strict_equal(stream.read(1), b'1')
+        self.assert_strict_equal(stream.read(1), b'2')
+        self.assert_strict_equal(stream.read(), b'3')
+        self.assert_strict_equal(stream.read(), b'')
 
         io = BytesIO(b'123456')
         stream = wsgi.LimitedStream(io, 3)
-        self.assert_equal(stream.read(-1), b'123')
+        self.assert_strict_equal(stream.read(-1), b'123')
+
+        io = BytesIO(b'123456')
+        stream = wsgi.LimitedStream(io, 0)
+        self.assert_strict_equal(stream.read(-1), b'')
+
+        io = StringIO(u'123456')
+        stream = wsgi.LimitedStream(io, 0)
+        self.assert_strict_equal(stream.read(-1), u'')
 
     def test_limited_stream_disconnection(self):
         io = BytesIO(b'A bit of content')
